# pico-sbc

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  pico_sdk_import.cmake
.github/workflows/: host-tests.yml
docs/: architecture.md  hardware.md  roadmap.md  usb-protocol.md  user-manual.md
examples/basic/: 01_hello.bas  02_arithmetic.bas  03_for_loop.bas  04_input_branch.bas  05_countdown.bas  06_sum_goto.bas  07_factorial.bas  08_trigonometry.bas  09_mandelbrot_text.bas  README.md
firmware/mini-computer/: CMakeLists.txt  README.md
firmware/mini-computer/src/: main.c  ui.c  ui.h
firmware/scientific-calculator/: .gitignore  CMakeLists.txt  README.md
firmware/scientific-calculator/linker/: pico_flash_region.ld
firmware/scientific-calculator/src/: basic_engine.c  basic_engine.h  calculation_status.c  calculation_status.h  calculator_circuit.c  calculator_circuit.h  calculator_complex.c  calculator_complex.h  calculator_dialog.c  calculator_dialog.h  calculator_engine.c  calculator_engine.h  calculator_graph.c  calculator_graph.h  calculator_keymaps.c  calculator_keymaps.h  calculator_list.c  calculator_list.h  calculator_logic.c  calculator_logic.h  calculator_navigation.c  calculator_navigation.h  calculator_number_theory.c  calculator_number_theory.h  calculator_pages.c  calculator_pages.h  calculator_persistence.c  calculator_persistence.h  calculator_precision.c  calculator_precision.h  calculator_program.c  calculator_program.h  calculator_statistics.c  calculator_statistics.h  calculator_storage.c  calculator_storage.h  calculator_symbols.c  calculator_symbols.h  calculator_ui.c  calculator_ui.h  (+41 more)
lib/board/: CMakeLists.txt
lib/board/include/: board.h  lcd_st7796.h  touch_gt911.h
lib/board/src/: board.c  lcd_st7796.c  touch_gt911.c
tests/: .gitignore  CMakeLists.txt
tests/calculator/: mock_lcd.c  mock_lcd.h  test_basic_engine.c  test_calculation_status.c  test_calculator_circuit.c  test_calculator_complex.c  test_calculator_dialog.c  test_calculator_list.c  test_calculator_logic.c  test_calculator_pages.c  test_calculator_persistence.c  test_calculator_program.c  test_calculator_statistics.c  test_calculator_symbols.c  test_calculator_ui_input.c  test_calculator_units.c  test_calculator_usb_protocol.c  test_circuit_model.c  test_complex_engine.c  test_decimal_engine.c  test_engine.c  test_expression_editor.c  test_graph_model.c  test_graph_renderer.c  test_high_precision_engine.c  test_keymaps.c  test_logic_circuit_bridge.c  test_logic_engine.c  test_navigation.c  test_number_formats.c  test_number_theory.c  test_numerical_analysis.c  test_programmer.c  test_statistics_engine.c  test_unit_engine.c
tests/calculator/pico/: stdlib.h
tests/tools/: test_pico_calc_cli.py  test_pico_calc_gui_model.py
tools/: capture_manual_screenshots.py  pico_calc_cli.py  pico_calc_gui.py  pico_calc_gui_model.py  requirements-docs.txt
